--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,12 +1,12 @@
 server {
   listen 80;
 
-  location /rest {
+  location /inventarioFEIUV {
     resolver 8.8.8.8;
-    proxy_pass http://morning-sea-56517.herokuapp.com/articulos;
+    proxy_pass http://morning-sea-56517.herokuapp.com/articulos/prestamo;
   }
 
-  location /soap {
+  location /cubiculosFEIUV {
     resolver 8.8.8.8;
     proxy_pass http://prestamos-feiuv.herokuapp.com/ws/prestamosFEIUV.wsdl;
   }
