--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -3,7 +3,8 @@ server {
 
   location /inventarioFEIUV {
     resolver 8.8.8.8;
-    proxy_pass http://morning-sea-56517.herokuapp.com;
+    proxy_pass http://morning-sea-56517.herokuapp.com/articulos;
+    proxy_pass http://morning-sea-56517.herokuapp.com/prestamos;
   }
 
   location /cubiculosFEIUV {
