--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -4,6 +4,10 @@ server {
   location /inventarioFEIUV {
     resolver 8.8.8.8;
     proxy_pass http://morning-sea-56517.herokuapp.com/articulos;
+  }
+
+  location /prestamosFEIUV {
+    resolver 8.8.8.8;
     proxy_pass http://morning-sea-56517.herokuapp.com/prestamos;
   }
 
